WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287832
[Grid] Crash in gridAreaPositionForOutOfFlowGridItem during consecutive occurrences of simplified layout
https://bugs.webkit.org/show_bug.cgi?id=287832
Summary
[Grid] Crash in gridAreaPositionForOutOfFlowGridItem during consecutive occur...
Sammy Gill
Reported
2025-02-17 15:51:53 PST
When simplified layout occurs we do not properly clean up our out of flow renderers map in RenderGrid. This can cause a RELEASE_ASSERT to occur if simplified layout occurs consecutively
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2025-02-17 15:52:14 PST
rdar://144491217
Sammy Gill
Comment 2
2025-02-17 16:04:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40733
EWS
Comment 3
2025-02-18 12:25:33 PST
Committed
290546@main
(a2043fd47c10): <
https://commits.webkit.org/290546@main
> Reviewed commits have been landed. Closing PR #40733 and removing active labels.
EWS
Comment 4
2025-02-19 11:49:18 PST
Committed
289651.143@safari-7621-branch
(05f8390cd46d): <
https://commits.webkit.org/289651.143@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2636 and removing active labels.
Ryosuke Niwa
Comment 5
2025-03-14 15:28:09 PDT
***
Bug 287481
has been marked as a duplicate of this bug. ***
Frédéric Wang (:fredw)
Comment 6
2025-04-22 07:17:04 PDT
***
Bug 287481
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug